# flux

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CHANGES.md  CLEANUP_SUMMARY.md  CMakeLists.txt  README.md  TODO.md  review.md  update_submodules.sh
.github/workflows/: ci.yml
cmake/: CompileShaders.cmake  embed_shaders.py  fluxConfig.cmake.in
docs/: ADDRESS_SANITIZER.md  ARCHITECTURE.md  COMPONENT_GUIDE.md  DESIGN.md  DEVELOPMENT.md  EVENT_SYSTEM.md  ROADMAP.md  SDL2_BACKEND.md  TEST_MODE.md  WHY_FLUX.md
examples/: README.md
examples/01-hello-world/: main.cpp
examples/02-stack-alignment-demo/: main.cpp
examples/03-counter/: main.cpp
examples/04-todo-app/: README.md  main.cpp
examples/05-colors-and-theming/: README.md  main.cpp
examples/06-media-player/: main.cpp
examples/07-custom-drawing/: main.cpp
examples/08-dashboard/: main.cpp
examples/09-flexbox-demo/: README.md  main.cpp
examples/10-justify-content-demo/: README.md  main.cpp
examples/11-automotive-dashboard/: README.md  main.cpp
examples/12-nanovg-demo/: main.cpp
examples/13-resize-test/: main.cpp
examples/14-svg-demo/: README.md  main.cpp
examples/15-render-context-demo/: main.cpp  main.cpp.backup
examples/17-login-manager/: README.md  main.cpp
examples/19-clock/: clock.hpp  main.cpp
examples/22-grid-demo/: main.cpp
examples/23-spacer-grid-demo/: main.cpp
examples/24-calculator/: README.md  main.cpp
examples/25-cursor-demo/: main.cpp
examples/26-declarative-cursor/: main.cpp
examples/27-focus-keyboard-demo/: main.cpp
examples/28-event-system-demo/: README.md  main.cpp
examples/29-color-picker/: README.md  main.cpp
examples/30-scroll-demo/: README.md  main.cpp
examples/31-component-showcase/: README.md  main.cpp
examples/32-label-position-demo/: main.cpp
examples/33-scroll-area-demo/: README.md  main.cpp
examples/animation/: main.cpp
examples/calculator/: README.md  main.cpp
examples/clock/: main.cpp
examples/gpu-test/: main.cpp  shapes_test.cpp
examples/hello-world/: main.cpp
examples/llm-studio/: AppState.hpp  Theme.hpp  main.cpp
examples/llm-studio/App/: ActionDispatcher.hpp  ScreenCapture.hpp  StateSerializer.hpp  TestServer.hpp
examples/llm-studio/Components/: ChatBubble.hpp  CodeBlock.hpp  Dialog.hpp  DropdownMenu.hpp  SectionHeader.hpp  SelectInput.hpp  TextArea.hpp  TextInput.hpp  TypingIndicator.hpp
examples/llm-studio/Views/: ChatView.hpp  HubView.hpp  IconRail.hpp  ImageView.hpp  ModelConfigSidebar.hpp  SettingsView.hpp  Sidebar.hpp  TopBar.hpp
examples/passwords/: main.cpp
examples/shapes/: main.cpp
examples/simple-test/: main.cpp
examples/svg-demo/: main.cpp
examples/terminal/: Pty.cpp  Pty.hpp  TerminalEmulator.cpp  TerminalEmulator.hpp  TerminalKeyBindings.cpp  TerminalKeyBindings.hpp  TerminalSession.cpp  TerminalSession.hpp  TerminalView.cpp  TerminalView.hpp  main.cpp  memory_benchmark.cpp
include/: Flux.hpp
include/Flux/Animation/: Animatable.hpp  AnimatedProperty.hpp  Animation.hpp  AnimationEngine.hpp  Easing.hpp
include/Flux/Core/: Application.hpp  ClipboardUtil.hpp  ControlMetrics.hpp  CursorType.hpp  Element.hpp  Environment.hpp  EventTypes.hpp  FocusManager.hpp  FocusState.hpp  FontDiscovery.hpp  KeyEvent.hpp  KeyboardInputHandler.hpp  LayoutTree.hpp  Log.hpp  MouseInputHandler.hpp  OverlayManager.hpp  PlatformWindowFactory.hpp  Property.hpp  ResourceManager.hpp  Runtime.hpp  ShortcutManager.hpp  State.hpp  Theme.hpp  Types.hpp  Typography.hpp  Utilities.hpp  View.hpp  ViewAdapter.hpp  ViewHelpers.hpp  ViewInterface.hpp  ViewTraits.hpp  Window.hpp  WindowBackend.hpp  WindowEventObserver.hpp
include/Flux/GPU/: Device.hpp  Types.hpp
include/Flux/Graphics/: Atlas.hpp  CommandCompiler.hpp  FontProvider.hpp  GPURenderContext.hpp  GPURendererBackend.hpp  GlyphAtlas.hpp  ImageCache.hpp  NanoVGBackend.hpp  NanoVGRenderContext.hpp  Path.hpp  PathFlattener.hpp  RenderCommandBuffer.hpp  RenderContext.hpp  Renderer.hpp
include/Flux/Layout/: LayoutEngine.hpp
include/Flux/Platform/: AppleClipboard.hpp  AppleEventLoopWake.hpp  AppleFontResolver.hpp  ApplePathUtil.hpp  Clipboard.hpp  EventLoopWake.hpp  FontResolver.hpp  (+22 more)
shaders/: circle.frag.glsl  glyph.frag.glsl  glyph.vert.glsl  image.frag.glsl  image.vert.glsl  line.frag.glsl  path.vert.glsl  rect.frag.glsl  sdf_line.vert.glsl  sdf_quad.vert.glsl  test_triangle.vert.glsl
src/Animation/: AnimationEngine.cpp  Easing.cpp
src/Core/: Application.cpp  ClipboardUtil.mm  ClipboardUtilSDL.cpp  Demangle.cpp  Element.cpp  FocusManager.cpp  FocusState.cpp  FontDiscovery.cpp  KeyboardInputHandler.cpp  MouseInputHandler.cpp  PlatformWindowFactory.cpp  ResourceManager.cpp  Runtime.cpp  ShortcutManager.cpp  Window.cpp
src/GPU/: DeviceFactory.cpp
src/Graphics/: Atlas.cpp  CommandCompiler.cpp  FontProvider.cpp  GPURenderContext.cpp  GPURendererBackend.cpp  GlyphAtlas.cpp  ImageCache.cpp  NanoVGBackend.cpp  NanoVGRenderContext.cpp  NanoVGRenderer.cpp  Path.cpp  PathFlattener.cpp  Renderer.cpp
src/Layout/: LayoutEngine.cpp
src/Platform/: AppleClipboard.mm  AppleEventLoopWake.mm  AppleFontResolver.mm  AppleMemoryFootprint.mm  ApplePathUtil.mm  EventLoopWake.cpp  GLFWWindow.cpp  GPUPlatformRenderer.cpp  LinuxFontResolver.cpp  LinuxPathUtil.cpp  MacWindow.mm  MacWindowFactory.mm  MemoryFootprintStub.cpp  PlatformRegistry.cpp  PlatformRegistryApple.mm  PlatformRegistrySDL.cpp  SDLClipboard.cpp  SDLEventLoopWake.cpp  SDLWindow.cpp  SDLWindowFactory.cpp  StubFontResolver.cpp  StubPathUtil.cpp  WakeEventLoop.mm  WakeEventLoopSDL.cpp  WaylandWindow.cpp
src/Testing/: ScreenCapture.hpp  TestServer.hpp
src/Utils/: SVGUtils.cpp
src/Views/: NanoSVG.cpp  SVG.cpp
tests/: test_element.cpp  test_layout.cpp  test_property.cpp  test_types.cpp
tests/ui/: flux_test_client.py  png_pixels.py  run_tests.py  save_svg_demo_screenshot.py  test_button.py  test_checkbox_toggle.py  test_dialog.py  test_focus.py  test_layout.py  test_nested_state.py  test_radio_select.py  test_scroll.py  test_slider.py  test_svg_demo.py  test_terminal.py  test_text_input.py  test_visibility.py
(+46 files in other folders)
